Gap for registration form fixed

--- a/public/resources/css/style.css
+++ b/public/resources/css/style.css
@@ -48,3 +48,6 @@
     background: none;
 
 }
+.input_holder h4{
+    font-weight: 500;
+}
